fixed some spacing issues, added resume PDF, fixed horizontal scroll in mobile

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -50,7 +50,7 @@
         top:0;
         left:0;
         z-index:500;
-        font-size:4rem;
+        font-size:8rem;
         width:100%;
         height:100vh;
         opacity:0.8;
